Revision history for Shell-Command

{{$NEXT}}

1.1  2023-07-30T21:34:55+02:00
    - simplify "cat" logic
    - remove unneeded escape from name
    - give test file the correct extension

1.0  2023-07-30T20:57:52+02:00
    - First version in the zef ecosystem