@@ -1,1 +1,3 @@
-.precomp
+.precomp/
+/Shell-Command-*
+*.rakucov
