@@ -2,7 +2,7 @@ name = Shell-Command
 
 [ReadmeFromPod]
 ; enabled = false
-filename = lib/Shell/Command.rakumod
+filename = doc/Shell-Command.rakudoc
 
 [UploadToZef]
 
@@ -10,4 +10,6 @@ filename = lib/Shell/Command.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
