@@ -1,0 +1,74 @@
+=begin pod
+
+=head1 NAME
+
+Shell::Command - provide cross-platform routines emulating common *NIX shell commands
+
+=head1 SYNOPSIS
+
+=begin code :lang<raku>
+use Shell::Command;
+
+# Recursive folder copy
+cp 't/dir1', 't/dir2', :r;
+
+# Remove a file
+rm_f 'to_delete';
+
+# Remove directory
+rmdir 't/dupa/foo/bar';
+
+# Make path
+mkpath 't/dir2';
+
+# Remove path
+rm_rf 't/dir2';
+
+# Find Raku in executable path
+my $raku-path = which('raku');
+
+# Concatenate the contents of a file or list of files and print to STDOUT
+cat "file1.txt", "file2.txt";
+
+# A cross platfrom syncronous run()
+my $command = $*DISTRO.is-win ?? 'binary.exe' !! 'binary';
+run-command($binary, 'some', 'parameter');
+=end code
+
+=head1 AUTHOR
+
+Tadeusz Sośnierz
+
+Source can be located at: https://github.com/raku-community-modules/Shell-Command
+. Comments and Pull Requests are welcome.
+
+=head1 CONTRIBUTORS
+
+=item Dagur Valberg Johansson
+=item Elizabeth Mattijsen
+=item Filip Sergot
+=item Geoffrey Broadwell
+=item GlitchMr
+=item Heather
+=item Kamil Kułaga
+=item Moritz Lenz
+=item Steve Mynott
+=item Timo Paulssen
+=item Tobias Leich
+=item Tim Smith
+=item Ahmad M. Zawawi (azawawi @ #raku)
+=item Martin Barth
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2010-2017 Tadeusz Sośnierz
+
+Copyright 2023-2025 Raku Community
+        
+This library is free software; you can redistribute it and/or modify it under the MIT license.
+    
+Please see the LICENCE file in the distribution
+
+=end pod
+
+# vim: expandtab shiftwidth=4
